# RuRu

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/example/: EntitySpawner.h  GamePlayScene.h
include/example/attacks/: EnemyStandardAttack.h  IAttack.h  PlayerSplitAttack.h  PlayerStandardAttack.h
include/example/buffs/: IBuff.h  SplitAttackBuff.h
include/example/components/: BoundryCheckComponent.h  BuffHolderComponent.h  BuffableComponent.h  CollisionComponent.h  ComponentTypes.h  DamageDealingComponent.h  DamageableComponent.h  EntityIdentifierComponent.h  LifeTimeComponent.h  PhysicsComponent.h  PlayerControlComponent.h  PositionComponent.h  RenderComponent.h  ShootingComponent.h
include/example/events/: EntityDestroyEvent.h  EventTypes.h
include/example/particles/: ExplosionParticle.h
include/example/systems/: CollisionSystem.h  LifeTimeSystem.h  MovementSystem.h  PlayerControlSystem.h  RenderSystem.h  ShootingSystem.h
include/ruru/: Config.h  Game.h  IScene.h  RuRu.h
include/ruru/components/: ComponentAccessor.h  ComponentManager.h  ComponentMixin.h  ComponentTypes.h
include/ruru/entities/: Entity.h  EntityManager.h
include/ruru/entity/: Entity.h  EntityManager.h
include/ruru/events/: Event.h  EventService.h  EventTypes.h  LoggedEventService.h
include/ruru/helpers/: ContiguousVector.h
include/ruru/particles/: ParticleManager.h
include/ruru/services/: IDataService.h  IService.h  ServiceLocator.h  ServiceMixin.h  ServiceTypes.h
include/ruru/systems/: SystemMixin.h
src/example/: CMakeLists.txt  EntitySpawner.cpp  GamePlayScene.cpp  main.cpp
src/example/attacks/: EnemyStandardAttack.cpp  PlayerSplitAttack.cpp  PlayerStandardAttack.cpp
src/example/buffs/: SplitAttackBuff.cpp
src/example/components/: BoundryCheckComponent.cpp  BuffableComponent.cpp  PhysicsComponent.cpp  ShootingComponent.cpp
src/example/particles/: ExplosionParticle.cpp
src/example/systems/: CollisionSystem.cpp  LifeTimeSystem.cpp  MovementSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp  ShootingSystem.cpp
src/ruru/: CMakeLists.txt  Config.cpp  Game.cpp
src/ruru/entity/: EntityManager.cpp
src/ruru/events/: EventService.cpp
src/ruru/particles/: ParticleManager.cpp
src/ruru/services/: ServiceLocator.cpp  ServiceMixin.cpp
